--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,6 @@
 {
 	"$schema": "https://json.schemastore.org/eslintrc.json",
-	"plugins": [
-		"@typescript-eslint",
-		"import"
-	],
+	"plugins": ["@typescript-eslint", "import"],
 	"parserOptions": {
 		"project": "tsconfig.json"
 	},
@@ -46,9 +43,7 @@
 			}
 		],
 		// false negatives
-		"import/namespace": [
-			"off"
-		],
+		"import/namespace": ["off"],
 		// we allow empty interfaces
 		"no-empty-pattern": "off",
 		"@typescript-eslint/no-empty-interface": "off",
@@ -57,10 +52,7 @@
 		// we sometimes use async functions that don't await anything
 		"@typescript-eslint/require-await": "off",
 		// make sure to `await` inside try…catch
-		"@typescript-eslint/return-await": [
-			"error",
-			"in-try-catch"
-		],
+		"@typescript-eslint/return-await": ["error", "in-try-catch"],
 		// allow unused vars prefixed with `_`
 		"@typescript-eslint/no-unused-vars": [
 			"error",
@@ -80,16 +72,11 @@
 	},
 	"overrides": [
 		{
-			"files": [
-				"src/app/**/*.ts?(x)"
-			],
+			"files": ["src/app/**/*.ts?(x)"],
 			"rules": {
 				"import/no-default-export": "off"
 			}
 		}
 	],
-	"ignorePatterns": [
-		"*.js",
-		"*.jsx"
-	]
+	"ignorePatterns": ["*.js", "*.jsx"]
 }
