--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint --fix --dir src",
+		"lint": "next lint --fix --dir src && pnpm prettier",
 		"prettier": "prettier --write ."
 	},
 	"dependencies": {
@@ -27,7 +27,8 @@
 		"@typescript-eslint/eslint-plugin": "^6.6.0",
 		"@typescript-eslint/parser": "^6.6.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-import": "^2.28.1",
+		"eslint-import-resolver-typescript": "^3.6.0",
+		"eslint-plugin-import": "npm:eslint-plugin-i@^2.28.1",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.4"
 	}
