--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,16 @@
 {
 	"$schema": "https://json.schemastore.org/eslintrc.json",
-	"plugins": ["@typescript-eslint", "import"],
+	"plugins": ["@typescript-eslint"],
 	"parserOptions": {
 		"project": "tsconfig.json"
 	},
 	"extends": [
 		"plugin:@typescript-eslint/recommended",
 		"plugin:@typescript-eslint/recommended-requiring-type-checking",
-		"plugin:import/recommended",
-		"plugin:import/typescript",
+		"next",
 		"next/core-web-vitals",
 		"prettier"
 	],
-	"settings": {
-		"import/resolver": {
-			"typescript": true,
-			"node": true
-		}
-	},
 	"rules": {
 		// sort imports
 		"import/order": [
