--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
 		"@types/react-dom": "18.2.7",
 		"autoprefixer": "10.4.15",
 		"eslint": "8.48.0",
-		"eslint-config-next": "13.4.19",
 		"next": "13.4.19",
 		"postcss": "8.4.29",
 		"react": "18.2.0",
@@ -24,11 +23,11 @@
 		"typescript": "5.2.2"
 	},
 	"devDependencies": {
+		"@next/eslint-plugin-next": "^13.4.19",
 		"@typescript-eslint/eslint-plugin": "^6.6.0",
 		"@typescript-eslint/parser": "^6.6.0",
+		"eslint-config-next": "^13.4.19",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-import-resolver-typescript": "^3.6.0",
-		"eslint-plugin-import": "npm:eslint-plugin-i@^2.28.1",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.4"
 	}
