--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,9 @@
 			}
 		],
 		"paths": {
-			"@/*": ["./src/*"],
+			"@components/*": ["./src/components/*"],
 			"@ui/*": ["./src/ui/*"],
-			"@components/*": ["./src/components/*"]
+			"@/*": ["./src/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
