--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
 			}
 		],
 		"paths": {
+			"@components/*": ["./src/components/*"],
+			"@ui/*": ["./src/ui/*"],
 			"@/*": ["./src/*"]
 		}
 	},
