--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,10 @@
 		"paths": {
 			"@components/*": ["./src/components/*"],
 			"@ui/*": ["./src/ui/*"],
+			"@services": ["./src/services"],
+			"@services/*": ["./src/services/*"],
+			"@types": ["./src/types"],
+			"@types/*": ["./src/types/*"],
 			"@/*": ["./src/*"]
 		}
 	},
