--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"autoprefixer": "10.4.15",
 		"clsx": "^2.0.0",
 		"eslint": "8.48.0",
+		"lucide-react": "^0.279.0",
 		"next": "13.4.19",
 		"postcss": "8.4.29",
 		"react": "18.2.0",
