--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint --fix --dir src && pnpm prettier",
-		"prettier": "prettier --write ."
+		"prettier": "prettier --write .",
+		"prepare": "husky install"
 	},
 	"dependencies": {
 		"@types/node": "20.5.9",
@@ -30,6 +31,8 @@
 		"@typescript-eslint/parser": "^6.6.0",
 		"eslint-config-next": "^13.4.19",
 		"eslint-config-prettier": "^9.0.0",
+		"husky": "^8.0.3",
+		"lint-staged": "^14.0.1",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.4"
 	}
