--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"start": "next start",
 		"lint": "next lint --fix --dir src && pnpm prettier",
 		"prettier": "prettier --write .",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"codegen": "graphql-codegen --config .graphqlrc.ts"
 	},
 	"dependencies": {
 		"@types/node": "20.5.9",
@@ -26,6 +27,9 @@
 		"typescript": "5.2.2"
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "5.0.0",
+		"@graphql-codegen/client-preset": "4.1.0",
+		"@next/env": "^13.5.2",
 		"@next/eslint-plugin-next": "^13.4.19",
 		"@typescript-eslint/eslint-plugin": "^6.6.0",
 		"@typescript-eslint/parser": "^6.6.0",
