--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,12 @@
 					"index",
 					"object",
 					"type"
-				]
+				],
+				"newlines-between": "always",
+				"alphabetize": {
+					"order": "asc",
+					"caseInsensitive": true
+				}
 			}
 		],
 		// no let exports
@@ -81,6 +86,14 @@
 			{
 				"allowNumber": true,
 				"allowBoolean": true
+			}
+		],
+		// forbid restricted imports
+		"no-restricted-imports": [
+			"error",
+			{
+				"name": "next/router",
+				"message": "Please use next/navigation instead."
 			}
 		]
 	},
