--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	"graphql-config.dotEnvPath": "./.env",
-	"graphql-config.load.configName": "graphql",
+	"graphql-config.dotEnvPath": "./.env.local",
 	"files.associations": {
 		"*.css": "tailwindcss"
 	},
