--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint --fix --dir src && pnpm prettier",
-		"prettier": "prettier --write ."
+		"prettier": "prettier --write .",
+		"prepare": "husky install",
+		"codegen": "graphql-codegen --config .graphqlrc.ts"
 	},
 	"dependencies": {
 		"@types/node": "20.5.9",
@@ -16,6 +18,7 @@
 		"autoprefixer": "10.4.15",
 		"clsx": "^2.0.0",
 		"eslint": "8.48.0",
+		"lucide-react": "^0.279.0",
 		"next": "13.4.19",
 		"postcss": "8.4.29",
 		"react": "18.2.0",
@@ -24,11 +27,17 @@
 		"typescript": "5.2.2"
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "5.0.0",
+		"@graphql-codegen/client-preset": "4.1.0",
+		"@graphql-typed-document-node/core": "^3.2.0",
+		"@next/env": "^13.5.2",
 		"@next/eslint-plugin-next": "^13.4.19",
 		"@typescript-eslint/eslint-plugin": "^6.6.0",
 		"@typescript-eslint/parser": "^6.6.0",
 		"eslint-config-next": "^13.4.19",
 		"eslint-config-prettier": "^9.0.0",
+		"husky": "^8.0.3",
+		"lint-staged": "^14.0.1",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.4"
 	}
