--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -95,7 +95,9 @@
 				"name": "next/router",
 				"message": "Please use next/navigation instead."
 			}
-		]
+		],
+
+		"@typescript-eslint/no-misused-promises": "warn"
 	},
 	"overrides": [
 		{
