--- a/package.json
+++ b/package.json
@@ -16,25 +16,28 @@
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
 		"autoprefixer": "10.4.15",
+		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
-		"eslint": "8.48.0",
+		"eslint": "8.50.0",
 		"lucide-react": "^0.279.0",
 		"next": "13.5.3",
 		"postcss": "8.4.29",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "5.2.2"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "5.0.0",
 		"@graphql-codegen/client-preset": "4.1.0",
 		"@graphql-typed-document-node/core": "^3.2.0",
-		"@next/env": "^13.5.3",
-		"@next/eslint-plugin-next": "^13.5.3",
-		"@typescript-eslint/eslint-plugin": "^6.6.0",
-		"@typescript-eslint/parser": "^6.6.0",
-		"eslint-config-next": "^13.5.3",
+		"@next/env": "^13.5.4",
+		"@next/eslint-plugin-next": "^13.5.4",
+		"@typescript-eslint/eslint-plugin": "^6.7.4",
+		"@typescript-eslint/parser": "^6.7.4",
+		"eslint-config-next": "^13.5.4",
 		"eslint-config-prettier": "^9.0.0",
 		"husky": "^8.0.3",
 		"lint-staged": "^14.0.1",
