--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
 		"codegen": "graphql-codegen --config .graphqlrc.ts"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.1",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@types/node": "20.5.9",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
@@ -24,10 +27,12 @@
 		"postcss": "8.4.29",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.47.0",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
 		"tailwindcss-animate": "^1.0.7",
-		"typescript": "5.2.2"
+		"typescript": "5.2.2",
+		"zod": "^3.22.3"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "5.0.0",
