--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"eslint": "8.50.0",
+		"lodash": "^4.17.21",
 		"lucide-react": "^0.279.0",
 		"next": "13.5.3",
 		"postcss": "8.4.29",
@@ -40,6 +41,7 @@
 		"@graphql-typed-document-node/core": "^3.2.0",
 		"@next/env": "^13.5.4",
 		"@next/eslint-plugin-next": "^13.5.4",
+		"@types/lodash": "^4.14.199",
 		"@typescript-eslint/eslint-plugin": "^6.7.4",
 		"@typescript-eslint/parser": "^6.7.4",
 		"eslint-config-next": "^13.5.4",
