--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,10 @@
 			}
 		],
 		"paths": {
+			"@serverActions": ["./src/serverActions"],
+			"@serverActions/*": ["./src/serverActions/*"],
+			"@utils": ["./src/utils"],
+			"@utils/*": ["./src/utils/*"],
 			"@providers/*": ["./src/providers/*"],
 			"@gql/*": ["./src/gql/*"],
 			"@components/*": ["./src/components/*"],
