--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -95,6 +95,15 @@
 				"name": "next/router",
 				"message": "Please use next/navigation instead."
 			}
+		],
+
+		"@typescript-eslint/no-misused-promises": [
+			"error",
+			{
+				"checksVoidReturn": {
+					"attributes": false
+				}
+			}
 		]
 	},
 	"overrides": [
